--- a/index.html
+++ b/index.html
@@ -272,12 +272,73 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[7] Y. Mei, <b>Z. Gao</b>, D. Mi, P. Xiao and M.-S. Alouini, "Compressive Sensing Based
+                            Grant-Free Random Access for Massive MTC," <i>2020 International Conference on UK-China
+                                Emerging Technologies (UCET)</i>, Glasgow, United Kingdom, 2020. (<font color="#FF0000">
+                                Best Paper</font>)
+                            [<a href="https://ieeexplore.ieee.org/document/9205389" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[6] Z. Wan, <b>Z. Gao</b> and M. Alouini, "Broadband Channel Estimation for Intelligent
+                            Reflecting Surface Aided mmWave Massive MIMO Systems," <i>2020 IEEE International
+                                Conference on Communications (ICC)</i>, Dublin, Ireland, 2020, pp. 1-6.
+                            [<a href="https://ieeexplore.ieee.org/document/9149146" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[5] M. Ke, <b>Z. Gao</b> and Y. Wu, "Compressive Massive Access for Internet of Things:
+                            Cloud
+                            Computing or Fog Computing?," <i>2020 IEEE International Conference on
+                                Communications (ICC)</i>, Dublin, Ireland, 2020, pp. 1-6.
+                            [<a href="https://ieeexplore.ieee.org/document/9148994" target="_blank">URL</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-M.Ke/tree/main/code_icc2020"
+                                target="_blank">Code</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[4] L. Qiao and <b>Z. Gao</b>, "Joint Active Device and Data Detection for Massive MTC
+                            Relying on Spatial Modulation," <i>2020 IEEE Wireless Communications and Networking
+                                Conference Workshops (WCNCW)</i>, Seoul, Korea (South), 2020, pp. 1-6.
+                            [<a href="https://ieeexplore.ieee.org/document/9124834" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[3] A. Liao, <b>Z. Gao</b>, Y. Wu, H. Wang, Y. Yang and D. Wu, "Multi-User Wideband Sparse
+                            Channel Estimation for Aerial BS with Hybrid Full-Dimensional MIMO," <i>2019 IEEE
+                                International Conference on Communications Workshops (ICC Workshops)</i>, Shanghai,
+                            China, 2019, pp. 1-6.
+                            [<a href="https://ieeexplore.ieee.org/document/8757125" target="_blank">URL</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao/raw/main/ICC_2019_Workshop_Slides.pdf"
+                                target="_blank">Slides</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao/tree/main/Liao_ICCwks19"
+                                target="_blank">Code</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
                         <span>[2] M. Ke, <b>Z. Gao</b>, Y. Wu and X. Meng, "Compressive Massive Random Access for
                             Massive
                             Machine-Type Communications (mMTC)," <i>2018 IEEE Global Conference on Signal and
                                 Information
                                 Processing (GlobalSIP)</i>, Anaheim, CA, USA, 2018, pp. 156-160.
                             [<a href="https://ieeexplore.ieee.org/document/8646496" target="_blank">URL</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-M.Ke/tree/main/code_globalsip2018"
+                                target="_blank">Code</a>]
                         </span>
                     </p>
                 </ul>
