--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <span>[9] Y. Mei, <b>Z. Gao</b>, Y. Wu, W. Chen, D. W. K. Ng, M. Di Renzo, "Compressive Sensing
                             Based Joint Activity and Data Detection for Grant-Free Massive Access," arXiv preprint
                             arXiv:2011.07928 (2020).
-                            (<b>SCI Q1 Top, IF=11.42</b>, <i>Early Access</i>)
+                            (<i>Pre-Print</i>)
                             [<a href="https://arxiv.org/abs/2011.07928" target="_blank">URL</a>]
                         </span>
                     </p>
