--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[7] Y. Mei, <b>Z. Gao</b>, D. Mi, P. Xiao and M.-S. Alouini, "Compressive Sensing Based
+                        <span>[19] Y. Mei, <b>Z. Gao</b>, D. Mi, P. Xiao and M.-S. Alouini, "Compressive Sensing Based
                             Grant-Free Random Access for Massive MTC," <i>2020 International Conference on UK-China
                                 Emerging Technologies (UCET)</i>, Glasgow, United Kingdom, 2020.
                             (<font color="#FF0000">Best Paper</font>)
@@ -430,7 +430,7 @@
 
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[6] Z. Wan, <b>Z. Gao</b> and M. Alouini, "Broadband Channel Estimation for Intelligent
+                        <span>[18] Z. Wan, <b>Z. Gao</b> and M. Alouini, "Broadband Channel Estimation for Intelligent
                             Reflecting Surface Aided mmWave Massive MIMO Systems," <i>2020 IEEE International
                                 Conference on Communications (ICC)</i>, Dublin, Ireland, 2020, pp. 1-6.
                             [<a href="https://ieeexplore.ieee.org/document/9149146" target="_blank">URL</a>]
@@ -440,7 +440,7 @@
 
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[5] M. Ke, <b>Z. Gao</b> and Y. Wu, "Compressive Massive Access for Internet of Things:
+                        <span>[17] M. Ke, <b>Z. Gao</b> and Y. Wu, "Compressive Massive Access for Internet of Things:
                             Cloud
                             Computing or Fog Computing?," <i>2020 IEEE International Conference on
                                 Communications (ICC)</i>, Dublin, Ireland, 2020, pp. 1-6.
@@ -455,7 +455,7 @@
 
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[4] L. Qiao and <b>Z. Gao</b>, "Joint Active Device and Data Detection for Massive MTC
+                        <span>[16] L. Qiao and <b>Z. Gao</b>, "Joint Active Device and Data Detection for Massive MTC
                             Relying on Spatial Modulation," <i>2020 IEEE Wireless Communications and Networking
                                 Conference Workshops (WCNCW)</i>, Seoul, Korea (South), 2020, pp. 1-6.
                             [<a href="https://ieeexplore.ieee.org/document/9124834" target="_blank">URL</a>]
@@ -467,7 +467,8 @@
 
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[3] A. Liao, <b>Z. Gao</b>, Y. Wu, H. Wang, Y. Yang and D. Wu, "Multi-User Wideband Sparse
+                        <span>[15] A. Liao, <b>Z. Gao</b>, Y. Wu, H. Wang, Y. Yang and D. Wu, "Multi-User Wideband
+                            Sparse
                             Channel Estimation for Aerial BS with Hybrid Full-Dimensional MIMO," <i>2019 IEEE
                                 International Conference on Communications Workshops (ICC Workshops)</i>, Shanghai,
                             China, 2019, pp. 1-6.
@@ -482,7 +483,7 @@
 
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[2] M. Ke, <b>Z. Gao</b>, Y. Wu and X. Meng, "Compressive Massive Random Access for
+                        <span>[14] M. Ke, <b>Z. Gao</b>, Y. Wu and X. Meng, "Compressive Massive Random Access for
                             Massive
                             Machine-Type Communications (mMTC)," <i>2018 IEEE Global Conference on Signal and
                                 Information
@@ -498,7 +499,7 @@
 
                 <ul>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                        <span>[1] A. Liao and <b>Z. Gao</b>, "Super-Resolution Channel Estimation for mmWave Massive
+                        <span>[13] A. Liao and <b>Z. Gao</b>, "Super-Resolution Channel Estimation for mmWave Massive
                             MIMO,"
                             <i>2018 IEEE International Conference on Communications (ICC)</i>, Kansas City, MO, 2018,
                             pp. 1-5.
@@ -508,6 +509,97 @@
                         </span>
                     </p>
                 </ul>
+                <ul>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[12] Yiwei Sun, <b>Zhen Gao</b>, Hua Wang, and Di Wu, "Machine learning based hybrid
+                            precoding
+                            for mmWave MIMO-OFDM with dynamic subarray," in <i>Proc. <b>IEEE Global Commun. Conf.
+                                    Workshop (GC
+                                    Wkshps)</b></i>, Dec. 2018, pp. 1-6.
+                        </span>
+                    </p>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[11] Yiwei Sun, <b>Zhen Gao</b>, Hua Wang, and Di Wu, "Wideband hybrid precoding for
+                            next-generation backhaul/fronthaul based on mmWave FD-MIMO," in <i>Proc. <b>IEEE Global
+                                    Commun. Conf.
+                                    Workshop (GC
+                                    Wkshps)</b></i>, Dec. 2018, pp. 1-6.
+                        </span>
+                    </p>
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[10] Zhitong Ni, J. Andrew Zhang, Kai Yang, Fei Gao, and <b>Zhen Gao</b>, "Codebook based
+                            minimum
+                            subspace distortion hybrid precoding for millimeter wave systems," in <i>Proc. <b>IEEE
+                                    Global
+                                    Commun. Conf.
+                                    Workshop (GC
+                                    Wkshps)</b></i>, Dec. 2018, pp. 1-6.
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[9] <b>Zhen Gao</b>, Linglong Dai, and Zhaocheneg Wang, "Channel estimation for mmWave
+                            massive
+                            MIMO based access and backhaul in ultra-dense network," in <i>Proc. <b>IEEE ICC'16</b></i>.
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[8] Wenqian Shen, Linglong Dai, Yi Shi, <b>Zhen Gao</b>, and Zhaocheng Wang, "MIMO channel
+                            estimation based on block iterative support detection," in <i>Proc. <b>IEEE WCNC'16</b></i>.
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[7] Linglong Dai, <b>Zhen Gao</b>, and Zhaocheng Wang, "Joint Channel Estimation and
+                            Feedback
+                            with Low Overhead for FDD Massive MIMO Systems," in <i>Proc. <b>IEEE/CIC ICCC'15</b></i>.
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[6] <b>Zhen Gao</b>, Linglong Dai, and Zhaocheneg Wang, "Block compressive channel
+                            estimation and
+                            feedback for FDD massive MIMO," <i><b>IEEE INFOCOM'15 Workshop</b></i>.
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[5] Wenqian Shen, Linglong Dai, <b>Zhen Gao</b>, Zhaocheng Wang, "Joint CSIT acquisition
+                            based on
+                            low-rank matrix recovery for FDD massive MIMO systems," <i><b>IEEE INFOCOM'15
+                                    Workshop</b></i>.
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[4] <b>Zhen Gao</b>, Chao Zhang. "Frequency-domain response based timing
+                            synchronization: A near optimal sampling phase criterion for TDS-OFDM," in <i>Proc. <b>IEEE
+                                    VTC'14-Fall</b></i>.
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[3] <b>Zhen Gao</b>, Chao Zhang, "Spectrum-efficiency parametric channel estimation scheme
+                            for massive MIMO systems," <i>Proc. <b>IEEE BMSB'14</b></i>.
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[2] Linglong Dai, <b>Zhen Gao</b>, Zhaocheng Wang, and Zhixing Yang, "Spectrum-efficient
+                            superimposed pilot design based on structured compressive sensing for downlink large-scale
+                            MIMO systems," <i>Proc. <b>URSI'14</b></i>.
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>[1] <b>Zhen Gao</b>, Chao Zhang, and Zhaocheng Wang. "An improved preamble design for
+                            broadcasting signalling with enhanced robustness," <i>Proc. <b>IEEE IWCMC'13</b></i>.
+                        </span>
+                    </p>
+                </ul>
+
+
                 <br />
 
 
