--- a/index.html
+++ b/index.html
@@ -424,6 +424,8 @@
                                 Emerging Technologies (UCET)</i>, Glasgow, United Kingdom, 2020.
                             (<font color="#FF0000">Best Paper</font>)
                             [<a href="https://ieeexplore.ieee.org/document/9205389" target="_blank">URL</a>]
+                            [<a href="./Files/2020_UCET.pdf"
+                                target="_blank">Slides</a>]
                         </span>
                     </p>
                 </ul>
@@ -434,7 +436,7 @@
                             Reflecting Surface Aided mmWave Massive MIMO Systems," <i>2020 IEEE International
                                 Conference on Communications (ICC)</i>, Dublin, Ireland, 2020, pp. 1-6.
                             [<a href="https://ieeexplore.ieee.org/document/9149146" target="_blank">URL</a>]
-                            [<a href="https://github.com/gaozhen16/gaozhen16.github.io/blob/main/Files/wzw_ICC_Slides.pdf"
+                            [<a href="./Files/wzw_ICC_Slides.pdf"
                                 target="_blank">Slides</a>]
                         </span>
                     </p>
