--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
                             , vol. 67, no. 12, pp. 8329-8345, Dec. 2019.
                             (<b>SCI Q1 Top, IF=5.646.</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8846224" target="_blank">URL</a>]
-                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao
-                            /tree/main/Liao_Tcom19" target="_blank">Code</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao/tree/main/Liao_Tcom19" target="_blank">Code</a>]
                         </span>
                     </p>
 
@@ -247,8 +246,7 @@
                             <i>IEEE Access</i>, vol. 5, pp. 24747-24757, 2017.
                             (<b>SCI Q2, IF=3.745.</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8093607" target="_blank">URL</a>]
-                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao
-                            /tree/main/Liao_Access17" target="_blank">Code</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao/tree/main/Liao_Access17" target="_blank">Code</a>]
                         </span>
                     </p>
 
