--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             Beijing,
                             China<br />
                             <class="staffshortcut">
-                                <A HREF="#Latest">News</A> |
+                                <A HREF="#Latest">Latest</A> |
                                 <A HREF="#Interest">Research Interest</A> |
                                 <A HREF="#Publications">Publications</A> |
                                 <A HREF="#Patents">Projects</A> |
@@ -62,6 +62,19 @@
                 </tr>
             </table>
 
+            <A NAME="Latest">
+                <h2>Latest News</h2>
+            </A>
+            <ul>
+                <li> <b>
+                        <font color="#FF0000">[2020.12]</font>
+                    </b> Minghui Wu was awarded <b>Second Prize</b> of National Competition of AI (<a
+                        href="https://mp.weixin.qq.com/s/yqaVs5dDe5mQwGoZwIeENA"
+                        target="_blank">
+                        <font style="font-family:Microsoft YaHei">吴铭晖 获得全国人工智能大赛二等奖</font>
+                    </a>)</li>
+            </ul>
+            <br />
 
             <A NAME="Interest">
                 <h2>Research Interest</h2>
@@ -218,7 +231,8 @@
                             , vol. 67, no. 12, pp. 8329-8345, Dec. 2019.
                             (<b>SCI Q1 Top, IF=5.646.</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8846224" target="_blank">URL</a>]
-                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao/tree/main/Liao_Tcom19" target="_blank">Code</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao/tree/main/Liao_Tcom19"
+                                target="_blank">Code</a>]
                         </span>
                     </p>
 
@@ -246,7 +260,8 @@
                             <i>IEEE Access</i>, vol. 5, pp. 24747-24757, 2017.
                             (<b>SCI Q2, IF=3.745.</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8093607" target="_blank">URL</a>]
-                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao/tree/main/Liao_Access17" target="_blank">Code</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-A.Liao/tree/main/Liao_Access17"
+                                target="_blank">Code</a>]
                         </span>
                     </p>
 
@@ -422,8 +437,7 @@
                                 Emerging Technologies (UCET)</i>, Glasgow, United Kingdom, 2020.
                             (<font color="#FF0000">Best Paper</font>)
                             [<a href="https://ieeexplore.ieee.org/document/9205389" target="_blank">URL</a>]
-                            [<a href="./Files/2020_UCET.pdf"
-                                target="_blank">Slides</a>]
+                            [<a href="./Files/2020_UCET.pdf" target="_blank">Slides</a>]
                         </span>
                     </p>
                 </ul>
@@ -434,8 +448,7 @@
                             Reflecting Surface Aided mmWave Massive MIMO Systems," <i>2020 IEEE International
                                 Conference on Communications (ICC)</i>, Dublin, Ireland, 2020, pp. 1-6.
                             [<a href="https://ieeexplore.ieee.org/document/9149146" target="_blank">URL</a>]
-                            [<a href="./Files/wzw_ICC_Slides.pdf"
-                                target="_blank">Slides</a>]
+                            [<a href="./Files/wzw_ICC_Slides.pdf" target="_blank">Slides</a>]
                         </span>
                     </p>
                 </ul>
