--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     </td>
                     <td align="left">
                         <p><a href="./">
-                                <font size="4">Zhen Gao (</font>
+                                <font size="4">Dr. Zhen Gao (</font>
                                 <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
                                 <font size="4">)</font>
                             </a><br />
-                            <i> Assistant Professor, Ph.D </i>
+                            <i> Ph.D, Assistant Professor, Tutor </i>
                             <br /><br />
                             <a href="http://arims.bit.edu.cn/" target="_blank">Advanced Research Institute of
                                 Multidisciplinary Science (ARIMS)</a><br />
