--- a/index.html
+++ b/index.html
@@ -170,6 +170,14 @@
                         </span>
                     </p>
 
+                    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                        <span>
+                            [4] <font style="font-family:Microsoft YaHei">杨昉, 刘思聪, <b>高镇</b>. "<i>5G 移动通信空口新技术</i>",
+                                电子工业出版社.</font>
+                            [<a href="https://item.jd.com/12695491.html" target="_blank">Buy</a>]
+                        </span>
+                    </p>
+
                 </ul>
             </font>
             <br />
