--- a/index.html
+++ b/index.html
@@ -495,6 +495,8 @@
                             Reflecting Surface Aided mmWave Massive MIMO Systems," <i>2020 IEEE International
                                 Conference on Communications (ICC)</i>, Dublin, Ireland, 2020, pp. 1-6.
                             [<a href="https://ieeexplore.ieee.org/document/9149146" target="_blank">URL</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-Z.Wan/tree/main/ICC_2020"
+                                target="_blank">Code</a>]
                             [<a href="./Files/wzw_ICC_Slides.pdf" target="_blank">Slides</a>]
                         </span>
                     </p>
