--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@
                                 Transactions on Vehicular Technology</i>, vol. 69, no. 2, pp. 2337-2342, Feb. 2020.
                             (<b>SCI Q2, IF=5.379</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8943174/" target="_blank">URL</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-Z.Wan/tree/main/TVT_2020"
+                                target="_blank">Code</a>]
                         </span>
                     </p>
 
