--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
                                 <font size="4">)</font>
                             </a><br />
-                            <i> Ph.D, Assistant Professor, Tutor </i>
+                            <i> Ph.D, Assistant Professor, PhD Tutor </i>
                             <br /><br />
                             <a href="http://arims.bit.edu.cn/" target="_blank">Advanced Research Institute of
                                 Multidisciplinary Science (ARIMS)</a><br />
