--- a/index.html
+++ b/index.html
@@ -97,11 +97,17 @@
                 To acquire the channel state information (CSI) of millimeter-wave (mmWave) or terahertz (THz) hybrid
                 massive multiple-input-multiple-output (MIMO) systems, the reliable and efficient channel estimation
                 methods with low training overhead and computational complexity are indispensable. The dominated
-                research directions of hybrid massive MIMO channel estimation include <b><font color="#FF0000">1)</font></b>
-                channel parameter (such as angle-of-arrivals/angle-of-departures (AoAs/AoDs), delays, Doppler shifts,
-                and channel gains) estimation using the spectrum estimation algorithms; <b><font color="#FF0000">2)</font></b>
+                research directions of hybrid massive MIMO channel estimation include <b>
+                    <font color="#FF0000">1)</font>
+                </b>
+                channel parameter estimation, such as angle-of-arrivals/angle-of-departures (AoAs/AoDs), delays, Doppler
+                shifts, and channel gains, using the spectrum estimation algorithms; <b>
+                    <font color="#FF0000">2)</font>
+                </b>
                 compressed sensing (CS) theory based channel estimation, e.g., greedy algorithms, sparse bayesian
-                learning (SBL), approximate message passing (AMP), etc; <b><font color="#FF0000">3)</font></b>
+                learning (SBL), approximate message passing (AMP), etc; <b>
+                    <font color="#FF0000">3)</font>
+                </b>
                 machine learning theory based channel estimation, e.g., expectation-naximization (EM), deep learning
                 neural networks, reinforcement learning, etc.
                 <br>
