--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 research directions of hybrid massive MIMO channel estimation include <b>
                     <font color="#FF0000">1)</font>
                 </b>
-                channel parameter estimation, such as angle-of-arrivals/angle-of-departures (AoAs/AoDs), delays, Doppler
-                shifts, and channel gains, using the spectrum estimation algorithms; <b>
+                spectrum estimation theory based channel parameter estimation with the main channel parameters involving
+                angle-of-arrivals/angle-of-departures (AoAs/AoDs), delays, Doppler shifts, and channel gains, etc; <b>
                     <font color="#FF0000">2)</font>
                 </b>
                 compressed sensing (CS) theory based channel estimation, e.g., greedy algorithms, sparse bayesian
