--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 
                 <br>
 
-                <li>Multicarrier Modulation</li>
-                <!--To exploit wider frequency bands, achieve higher spectrum-efficiency, and even better mitigate the
+                <!--<li>Multicarrier Modulation</li>
+                To exploit wider frequency bands, achieve higher spectrum-efficiency, and even better mitigate the
                 multipath fading effect, multiple carrier communication emerges, and orthogonal frequency-division
                 multiplexing (OFDM) is on of the most commonly used solution. Recently, new modulation techniques have
                 been proposed such as Filter Bank MultiCarrier (FBMC) and Orthogonal Time Frequency and Space (OTFS),
@@ -135,7 +135,7 @@
                         style="margin-left:150 auto;">
                 </div>
 
-                <br>-->
+                <br>
                 <li>Multiple Antenna Systems</li>
                 MIMO is a method for multiplying the capacity of a radio link using multiple transmission and receiving
                 antennas to exploit multipath propagation. Precoding, spatial multiplexing, and diversity coding can be
@@ -143,7 +143,7 @@
                 and Intelligent Reflecting Surface (IRS) which can be equipped with massive elements.
 
                 <img src="./Files/MIMO_Precoding.jpg" title="Fig. " alt="MIMO" style="display:block; margin:0 auto;">
-                <br>
+                <br>-->
                 <li>Sparse Signal Processing</li>
                 Compressed sensing is a signal processing technique for efficiently acquiring and reconstructing a
                 signal, by finding solutions to underdetermined linear systems. This is based on the principle that,
