--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
                 <br>
                 <br>
                 <div align="center">
-                    <img src="./Files/dataDriven.jpg" title="dataDriven alt="MIMO" height="225"
+                    <img src="./Files/dataDriven.jpg" title="dataDriven" alt="MIMO" height="225"
                         width="600" style="display:block; margin:0 auto;">
                 </div>
                 <br>
                 <br>
                 <div align="center">
-                    <img src="./Files/modelDriven.jpg" title="modelDrivenalt="MIMO" height="150"
+                    <img src="./Files/modelDriven.jpg" title="modelDriven" alt="MIMO" height="150"
                         width="700" style="display:block; margin:0 auto;">
                 </div>
 
@@ -264,8 +264,8 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[25] S. Liu, <b>Z. Gao</b>, J. Zhang, M. D. Renzo and M. -S. Alouini, "Deep Denoising
                             Neural
-                            Network Assisted Compressive Channel Estimation for mmWave Intelligent Reflecting Surfaces,"
-                            in IEEE Transactions on Vehicular Technology, vol. 69, no. 8, pp. 9223-9228, Aug. 2020.
+                            Network Assisted Compressive Channel Estimation for mmWave Intelligent Reflecting Surfaces," 
+                            <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 8, pp. 9223-9228, Aug. 2020.
                             (<b>SCI Q2, IF=5.379</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9127834" target="_blank">URL</a>]
                             [<a href="https://github.com/scliubit/complex-DnCNN" target="_blank">Code</a>]
@@ -295,8 +295,8 @@
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[22] K. Ying, Z. Gao, S. Lyu, Y. Wu, H. Wang and M. Alouini, "GMD-Based Hybrid Beamforming
-                            for Large Reconfigurable Intelligent Surface Assisted Millimeter-Wave Massive MIMO," in IEEE
-                            Access, vol. 8, pp. 19530-19539, 2020.
+                            for Large Reconfigurable Intelligent Surface Assisted Millimeter-Wave Massive MIMO," <i>IEEE
+                            Access</i>, vol. 8, pp. 19530-19539, 2020.
                             (<b>SCI Q2, IF=3.745</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8964330" target="_blank">URL</a>]
                         </span>
