--- a/Projects/watermelon/index.html
+++ b/Projects/watermelon/index.html
@@ -240,7 +240,7 @@
     <script src="main.js" charset="utf-8"></script>
 
 
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
     <!-- 暴力扣篮 -->
     <!-- <ins class="adsbygoogle"
       style="position:absolute;border-top:5px #f0f0f1 solid;background:#f0f0f1;bottom:0px;z-index:1000;display:inline-block;min-width:320px;max-width:970px;width:100%;height:60px"
@@ -265,15 +265,15 @@
 	
 </script> -->
 
-    <script async data-ad-client="ca-pub-3932234672445376" data-ad-channel="7171445254" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
-    </script>
+    <!--<script async data-ad-client="ca-pub-3932234672445376" data-ad-channel="7171445254" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+    </script>-->
 
-    <script>
+    <!--<script>
         window.adsbygoogle = window.adsbygoogle || [];
         const adBreak = function(o) {
             adsbygoogle.push(o);
         }
-    </script>
+    </script>-->
 
 
     <script type="text/javascript">
