--- a/Projects/watermelon/index.html
+++ b/Projects/watermelon/index.html
@@ -276,7 +276,7 @@
     </script>-->
 
 
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         (function() {
             // open web debugger console
             if (typeof VConsole !== 'undefined') {
@@ -301,7 +301,7 @@
             cocos2d.addEventListener('load', engineLoaded, false);
             document.body.appendChild(cocos2d);
         })();
-    </script>
+    </script>-->
 
 
 
