--- a/Projects/watermelon/index.html
+++ b/Projects/watermelon/index.html
@@ -95,10 +95,23 @@
         <img src="res/loading.gif" width="7%" height="7%" />
     </div>
 
+    <!-- 判断浏览器是否屏蔽广告 -->
+    <script src="http://demo.jb51.net/js/2015/adview_pic_cpc_cpm_cpa_guanggao_gg_ads_300x250.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        var killAdT = typeof(killads);
+        <!-- if (typeof(killads)=='undefined'){ -->
+        <!-- alert('广告被过滤'); -->
+        <!-- } -->
+    </script>
+
 
 
 
     <!--<div align="center" style="font-size: 10px;color: dimgrey">advertisement</div>-->
+
+    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+    <script type="text/javascript" src="ads.js"></script>
+
     <script src="src/settings.js" charset="utf-8"></script>
 
     <script type="text/javascript">
