--- a/Projects/watermelon/index.html
+++ b/Projects/watermelon/index.html
@@ -109,8 +109,8 @@
 
     <!--<div align="center" style="font-size: 10px;color: dimgrey">advertisement</div>-->
 
-    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-    <script type="text/javascript" src="ads.js"></script>
+    <!--<script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>-->
+    <!--<script type="text/javascript" src="ads.js"></script>-->
 
     <script src="src/settings.js" charset="utf-8"></script>
 
