--- a/Projects/watermelon/index.html
+++ b/Projects/watermelon/index.html
@@ -51,7 +51,7 @@
             window.history.pushState(state, state.title, state.url);
         }
     </script> -->
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         var ua = navigator.userAgent.toLowerCase(); //获取判断用的对象
         //判断是否是微信下访问
         if (ua.match(/MicroMessenger/i) == "micromessenger") {
@@ -59,7 +59,7 @@
             location.href = "https://mp.weixin.qq.com/s/m0U0L-vnD0Gu8aPJ2vcPoA";
             // }               
         }
-    </script>
+    </script> -->
 
     <link rel="stylesheet" type="text/css" href="style-mobile.css" />
 
@@ -70,11 +70,6 @@
 
     <div id="canvasDiv" style="width:100%;height:100%;">
         <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
-
-        <video id="contentElement" style="display:none;position: absolute;top:0px;left: 0px;">
-                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.mp4"></source>
-                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.webm"></source>
-      </video>
         <div id="block-Box" style="display:block;width:100%;height:100%;"></div>
     </div>
 
